# corvex

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  future-plans.md  pyproject.toml
.github/workflows/: ci.yml
campaignfuse/: __init__.py  __main__.py  audit.py  auth.py  baselines.py  bus.py  cli.py  correlator.py  dash_server.py  dashboard.py  envelope.py  feeder.py  ingest.py  logs_page.py  oss_gate.py  prevention_log.py  seal.py  stage_b.py  stage_c.py  store.py
campaignfuse/contain/: CHECKLIST.md  __init__.py  dry_run.py
campaignfuse/eval/: __init__.py  harness.py
campaignfuse/sensors/: __init__.py  file_tail.py  jetstream_mtls.py
corvex/: __init__.py  __main__.py  auth.py  baselines.py  bus.py  cli.py  correlator.py  dash_server.py  dashboard.py  detectors.py  feeder.py  ingest.py  lab_enroll.py  logs_page.py  oss_gate.py  reconstruct.py  seal.py  stage_b.py  stage_c.py
corvex/adapters/: __init__.py  attack_repos.py  os_wide.py  windows_security.py
corvex/contain/: __init__.py  dry_run.py  hostile_bus.py  live.py  quarantine.py
corvex/dash_static/: monitor.html
corvex/eval/: __init__.py  break_points.py  claim_gates.py  harness.py  recon_regression.py
corvex/sensors/: __init__.py  file_tail.py  windows_os.py  (+1 more)
docs/: COLLEGE_SPIKE.md  DAILY_COMMIT_PLAN.md  STAGE_D.md  contain.md  how-corvex-works.md  os-wide-sensor.md  sensor-windows.md  stage-b.md  stage-c.md  stage-d-checklist.md  stranger-checklist.md  threat-model.md
fixtures/: byo_export_sample.jsonl  windows_host_map.json  windows_security_sample.json
heldout/: SEALED.PUBLISH.txt  SEALED.sha256  SEAL_TIMESTAMP.txt  held-benign.jsonl.sealed  held-exfil.jsonl.sealed  held-lateral-ood.jsonl.sealed  scorer_rules.json.sealed
reports/: AUDIT_BENCHMARK.json  RESULTS.md  break_os_wide_sensors.json  claim_gates.json  eval-heldout-console.txt  eval-train-console.txt  habit_loop.TEMPLATE.json  hostile_bus_selftest.json  non_author_fusion.json  oss_retention.json  prevention_log.jsonl  pytest.txt  reconstruction_regression.json  seal-day0.txt  security_l1_checklist.json  stageA.json  stageA.md  stageA_train.json  stageA_train.md  stage_d_dry_run.jsonl  stranger_dry_run.TEMPLATE.json  stranger_dry_run.json  stranger_dry_run.md
scripts/: age_seal.py  daily_audit.ps1  export_attack_theatre.py  export_live_lab_video.py  export_pitch_30s.py  gen_heldout.py  publish_seal.py  record_art_breaktest.py  record_corvex_demo.py  run_breaker_attacks.py  run_breaktest_lab.py  run_live_lab.py  run_os_wide_sensor_breaktest.py  run_pc_lab_fusion.py  run_sandbox_lab.py  smoke_os_wide_multihost.py
tests/: test_abuse.py  test_clean_clone.py  test_correlator_window.py  test_dashboard.py  test_day0.py  test_eval_metrics.py  test_os_wide_sensor.py  test_p1_p4.py  test_reconstruct_quarantine.py
train/: train-benign-a.jsonl  train-benign-b.jsonl  train-exfil.jsonl  train-fusion-chain.jsonl  train-lateral.jsonl  train-recon-lateral.jsonl
(+35 files in other folders)
