[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaignfuse"
version = "0.4.0"
description = "Corvex — multi-host campaign correlator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Corvex" }]
dependencies = [
  "typer>=0.12",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "import-linter>=2.0", "build>=1.0"]
stageb = ["nats-py>=2.7"]

[project.scripts]
corvex = "campaignfuse.cli:main"
cfuse = "campaignfuse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["campaignfuse*"]
exclude = ["drafts*", "tests*", "scripts*", "heldout*", "train*", "reports*"]

[tool.setuptools.package-data]
campaignfuse = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.importlinter]
root_packages = ["campaignfuse"]

[[tool.importlinter.contracts]]
name = "Eval must not import correlator internals"
type = "forbidden"
source_modules = ["campaignfuse.eval"]
forbidden_modules = [
  "campaignfuse.correlator",
  "campaignfuse.detectors",
]

[[tool.importlinter.contracts]]
name = "Public package must not import drafts"
type = "forbidden"
source_modules = ["campaignfuse"]
forbidden_modules = ["drafts"]
