[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corvex"
version = "1.1.0"
description = "Corvex — multi-host campaign correlator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Corvex" }]
dependencies = [
  "typer>=0.12",
  "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/Siddarthb07/corvex"
Repository = "https://github.com/Siddarthb07/corvex"
Issues = "https://github.com/Siddarthb07/corvex/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "import-linter>=2.0", "build>=1.0"]
stageb = ["nats-py>=2.7"]

[project.scripts]
corvex = "corvex.cli:main"
cfuse = "corvex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["corvex*"]
exclude = ["drafts*", "tests*", "scripts*", "heldout*", "train*", "reports*"]

[tool.setuptools.package-data]
corvex = ["py.typed", "dash_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.importlinter]
root_packages = ["corvex"]

[[tool.importlinter.contracts]]
name = "Eval must not import correlator internals"
type = "forbidden"
source_modules = ["corvex.eval"]
forbidden_modules = [
  "corvex.correlator",
  "corvex.detectors",
]

[[tool.importlinter.contracts]]
name = "Public package must not import drafts"
type = "forbidden"
source_modules = ["corvex"]
forbidden_modules = ["drafts"]
